@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-08-06T01:17:19Z",
+  "timestamp" : "2025-08-06T12:33:16Z",
   "count_outdated" : 5206,
   "uniques_outdated" : 2837,
-  "count" : 5244,
-  "uniques" : 2870,
+  "count" : 5251,
+  "uniques" : 2876,
   "clones" : [
     {
       "timestamp": "2025-07-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
+      "count_decinc": [ 2, 3 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-07-24T00:00:00Z",
@@ -121,6 +121,15 @@
       "uniques": 7,
       "uniques_minmax": [ 1, 7 ],
       "uniques_decinc": [ 0, 7 ]
+    },
+    {
+      "timestamp": "2025-08-06T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "count_decinc": [ 0, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ],
+      "uniques_decinc": [ 0, 6 ]
     }
   ]
 }
