@@ -1,11 +1,11 @@
 {
-  "count": 37,
-  "uniques": 18,
+  "count": 43,
+  "uniques": 22,
   "clones": [
     {
       "timestamp": "2025-07-23T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2025-07-24T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2025-08-05T00:00:00Z",
       "count": 9,
       "uniques": 7
+    },
+    {
+      "timestamp": "2025-08-06T00:00:00Z",
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
